Pillow - mark unsupported labels as disabled too

--- a/src/imageserver/admin/templates/admin_template_edit.html
+++ b/src/imageserver/admin/templates/admin_template_edit.html
@@ -1,6 +1,6 @@
 {% extends "admin_base.html" %}
 
-{% from "publish/inc_field_macros.html" import input, help, premium_icon with context %}
+{% from "publish/inc_field_macros.html" import input, help, disp_class with context %}
 
 {% block copyright %}
 <!-- 
