--- a/src/imageserver/templates/publish.html
+++ b/src/imageserver/templates/publish.html
@@ -1,6 +1,6 @@
 {% if embed %}{% extends "base_blank_js.html" %}{% else %}{% extends "base.html" %}{% endif %}
 
-{% from "publish/inc_field_macros.html" import input, help, premium_icon with context %}
+{% from "publish/inc_field_macros.html" import input, help, disp_class with context %}
 
 {% block copyright %}
 <!-- 
