--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% from "publish/inc_field_macros.html" import disp_class, disp_class_2 %}
+
 {% block copyright %}
 <!-- 
 	Document:      playground.html
@@ -96,8 +98,13 @@
 								<button type="button" onclick="Playground.resetCrop(true)">Reset crop</button>
 							</div>
 							<div>
-								<input id="autocropfit" type="checkbox" value="1" onchange="Playground.play({autocropfit: this.checked})">
-								<label for="autocropfit">Adjust crop to fit image size</label>
+								<input id="autocropfit" type="checkbox" value="1"
+								       {{ disp_class(supported_ops, 'crop_fit') }}
+								       onchange="Playground.play({autocropfit: this.checked})">
+								<label for="autocropfit"
+									   {{ disp_class(supported_ops, 'crop_fit') }}>
+									Adjust crop to fit image size
+								</label>
 							</div>
 						</fieldset>
 					</div>
@@ -105,17 +112,37 @@
 					<div>
 						<label>Borders</label>
 						<fieldset class="inline_form">
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'white'})" class="default">White</button>
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'black'})">Black</button>
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'gray'})">Mid Grey</button>
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'red'})">Red</button>
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'yellow'})">Yellow</button>
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'lightgray'})">Light Grey</button><br>
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'auto'})">Auto</button><br>
-							<button type="button" sticky-group="fill" onclick="Playground.play({fill:'none'})">Transparent</button> <label>Requires PNG or GIF file format</label>
+							<button type="button" sticky-group="fill"
+							        onclick="Playground.play({fill:'white'})" class="default">White</button>
+							<button type="button" sticky-group="fill"
+							        {{ disp_class(supported_ops, 'fill') }}
+							        onclick="Playground.play({fill:'black'})">Black</button>
+							<button type="button" sticky-group="fill"
+							        {{ disp_class(supported_ops, 'fill') }}
+							        onclick="Playground.play({fill:'gray'})">Mid Grey</button>
+							<button type="button" sticky-group="fill"
+							        {{ disp_class(supported_ops, 'fill') }}
+							        onclick="Playground.play({fill:'red'})">Red</button>
+							<button type="button" sticky-group="fill"
+							        {{ disp_class(supported_ops, 'fill') }}
+							        onclick="Playground.play({fill:'yellow'})">Yellow</button>
+							<button type="button" sticky-group="fill"
+							        {{ disp_class(supported_ops, 'fill') }}
+							        onclick="Playground.play({fill:'lightgray'})">Light Grey</button><br>
+							<button type="button" sticky-group="fill"
+							        {{ disp_class(supported_ops, 'fill') }}
+							        onclick="Playground.play({fill:'auto'})">Auto</button><br>
+							<button type="button" sticky-group="fill"
+							        {{ disp_class(supported_ops, 'fill') }}
+							        onclick="Playground.play({fill:'none'})">Transparent</button> <label>Requires PNG or GIF file format</label>
 							<div>
-								<input id="autosizefit" type="checkbox" value="1" onchange="Playground.play({autosizefit: this.checked})">
-								<label for="autosizefit">Adjust image size to remove borders</label>
+								<input id="autosizefit" type="checkbox" value="1"
+								       {{ disp_class(supported_ops, 'size_fit') }}
+								       onchange="Playground.play({autosizefit: this.checked})">
+								<label for="autosizefit"
+									   {{ disp_class(supported_ops, 'size_fit') }}>
+									Adjust image size to remove borders
+								</label>
 							</div>
 						</fieldset>
 					</div>
@@ -123,29 +150,59 @@
 					<div>
 						<label>Transforms</label>
 						<fieldset class="inline_form">
-							<button type="button" sticky-group="angle" onclick="Playground.play({angle:0})" class="default">No rotation</button>
-							<button type="button" sticky-group="angle" onclick="Playground.play({angle:-90})">Rotate 90&deg; left</button>
-							<button type="button" sticky-group="angle" onclick="Playground.play({angle:90})">Rotate 90&deg; right</button>
-							<button type="button" sticky-group="angle" onclick="Playground.play({angle:180})">Rotate 180&deg;</button>
-							<button type="button" sticky-group="angle" onclick="Playground.play({angle:-45})">Rotate 45&deg; left</button>
-							<button type="button" sticky-group="angle" onclick="Playground.play({angle:45})">Rotate 45&deg; right</button>
-							<button type="button" sticky-group="sharpen" onclick="Playground.play({sharpen:0})" class="default">No sharpen/blur</button>
-							<button type="button" sticky-group="sharpen"onclick="Playground.play({sharpen:100})">Sharpen</button>
-							<button type="button" sticky-group="sharpen"  onclick="Playground.play({sharpen:-300})">Blur</button>
-							<button type="button" sticky-group="flip" onclick="Playground.play({flip:''})" class="default">No flip</button>
-							<button type="button" sticky-group="flip" onclick="Playground.play({flip:'h'})">Flip horizontal</button>
-							<button type="button" sticky-group="flip" onclick="Playground.play({flip:'v'})">Flip vertical</button>
+							<button type="button" sticky-group="angle"
+							        onclick="Playground.play({angle:0})" class="default">No rotation</button>
+							<button type="button" sticky-group="angle"
+							        {{ disp_class(supported_ops, 'rotation') }}
+							        onclick="Playground.play({angle:-90})">Rotate 90&deg; left</button>
+							<button type="button" sticky-group="angle"
+							        {{ disp_class(supported_ops, 'rotation') }}
+							        onclick="Playground.play({angle:90})">Rotate 90&deg; right</button>
+							<button type="button" sticky-group="angle"
+							        {{ disp_class(supported_ops, 'rotation') }}
+							        onclick="Playground.play({angle:180})">Rotate 180&deg;</button>
+							<button type="button" sticky-group="angle"
+							        {{ disp_class(supported_ops, 'rotation') }}
+							        onclick="Playground.play({angle:-45})">Rotate 45&deg; left</button>
+							<button type="button" sticky-group="angle"
+							        {{ disp_class(supported_ops, 'rotation') }}
+							        onclick="Playground.play({angle:45})">Rotate 45&deg; right</button>
+							<button type="button" sticky-group="flip"
+							        onclick="Playground.play({flip:''})" class="default">No flip</button>
+							<button type="button" sticky-group="flip"
+							        {{ disp_class(supported_ops, 'flip') }}
+							        onclick="Playground.play({flip:'h'})">Flip horizontal</button>
+							<button type="button" sticky-group="flip"
+							        {{ disp_class(supported_ops, 'flip') }}
+							        onclick="Playground.play({flip:'v'})">Flip vertical</button>
+							<button type="button" sticky-group="sharpen"
+							        onclick="Playground.play({sharpen:0})" class="default">No sharpen/blur</button>
+							<button type="button" sticky-group="sharpen"
+							        {{ disp_class(supported_ops, 'sharpen') }}
+							        onclick="Playground.play({sharpen:100})">Sharpen</button>
+							<button type="button" sticky-group="sharpen"
+							        {{ disp_class(supported_ops, 'sharpen') }}
+							        onclick="Playground.play({sharpen:-300})">Blur</button>
 						</fieldset>
 					</div>
 					<br>
 					<div>
 						<label>Colour</label>
 						<fieldset class="inline_form">
-							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'', strip: 0})" class="default">Standard RGB</button>
-							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'fx-sepia', intent:'perceptual', strip: 1})">Sepia effect</button>
-							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'fx-sheen', intent:'perceptual', strip: 1})">Oil-sheen effect</button>
-							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'gray', icc:'', strip: 1})">Grey (simple)</button>
-							<button type="button" sticky-group="icc" onclick="Playground.play({colorspace:'srgb', icc:'greyscale', intent:'perceptual', strip: 1})">Grey (profile)</button>
+							<button type="button" sticky-group="icc"
+							        onclick="Playground.play({colorspace:'srgb', icc:'', strip: 0})" class="default">Standard RGB</button>
+							<button type="button" sticky-group="icc"
+							        {{ disp_class(supported_ops, 'icc_profile') }}
+							        onclick="Playground.play({colorspace:'srgb', icc:'fx-sepia', intent:'perceptual', strip: 1})">Sepia effect</button>
+							<button type="button" sticky-group="icc"
+							        {{ disp_class(supported_ops, 'icc_profile') }}
+							        onclick="Playground.play({colorspace:'srgb', icc:'fx-sheen', intent:'perceptual', strip: 1})">Oil-sheen effect</button>
+							<button type="button" sticky-group="icc"
+							        {{ disp_class(supported_ops, 'colorspace') }}
+							        onclick="Playground.play({colorspace:'gray', icc:'', strip: 1})">Grey (simple)</button>
+							<button type="button" sticky-group="icc"
+							        {{ disp_class(supported_ops, 'icc_profile') }}
+							        onclick="Playground.play({colorspace:'srgb', icc:'greyscale', intent:'perceptual', strip: 1})">Grey (profile)</button>
 						</fieldset>
 					</div>
 					<br>
@@ -153,12 +210,23 @@
 						<label>Overlay /<br>Watermark</label>
 						<fieldset class="inline_form">
 							{% if overlay_image %}
-							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:''})" class="default">No overlay</button>
-							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.3, ovpos:'c'})">Watermark small</button>
-							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.7, ovopacity:0.3, ovpos:'c'})">Watermark large</button>
-							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.3, ovopacity:1, ovpos:'nw'})">Corner logo 1</button>
-							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:1, ovpos:'se'})">Corner logo 2</button>
-							<button type="button" sticky-group="overlay" onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.5, ovpos:'se'})">Corner logo 3</button>
+							<button type="button" sticky-group="overlay"
+							        onclick="Playground.play({overlay:''})" class="default">No overlay</button>
+							<button type="button" sticky-group="overlay"
+							        {{ disp_class(supported_ops, 'overlay_src') }}
+							        onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.3, ovpos:'c'})">Watermark sm</button>
+							<button type="button" sticky-group="overlay"
+							        {{ disp_class(supported_ops, 'overlay_src') }}
+							        onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.7, ovopacity:0.3, ovpos:'c'})">Watermark lg</button>
+							<button type="button" sticky-group="overlay"
+							        {{ disp_class(supported_ops, 'overlay_src') }}
+							        onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.3, ovopacity:1, ovpos:'nw'})">Corner logo 1</button>
+							<button type="button" sticky-group="overlay"
+							        {{ disp_class(supported_ops, 'overlay_src') }}
+							        onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:1, ovpos:'se'})">Corner logo 2</button>
+							<button type="button" sticky-group="overlay"
+							        {{ disp_class(supported_ops, 'overlay_src') }}
+							        onclick="Playground.play({overlay:'{{ overlay_image }}', ovsize:0.2, ovopacity:0.5, ovpos:'se'})">Corner logo 3</button>
 							{% else %}
 							<label><i>Not currently available</i></label>
 							{% endif %}
@@ -168,21 +236,46 @@
 					<div>
 						<label>File format</label>
 						<fieldset class="inline_form">
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:70})">JPG quality 70%</button>
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:80})" class="default">JPG quality 80%</button>
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:90})">JPG quality 90%</button>
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'jpg', quality:20})">JPG quality 20%</button>
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'gif'})">GIF</button>
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'bmp'})">BMP</button>
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'png', quality:79})">PNG type 1</button>
-							<button type="button" sticky-group="format" onclick="Playground.play({format:'png', quality:31})">PNG type 2</button>
+							<button type="button" sticky-group="format"
+							        onclick="Playground.play({format:'jpg', quality:70})">JPG quality 70%</button>
+							<button type="button" sticky-group="format"
+							        onclick="Playground.play({format:'jpg', quality:80})" class="default">JPG quality 80%</button>
+							<button type="button" sticky-group="format"
+							        onclick="Playground.play({format:'jpg', quality:90})">JPG quality 90%</button>
+							<button type="button" sticky-group="format"
+							        onclick="Playground.play({format:'jpg', quality:20})">JPG quality 20%</button>
+							<button type="button" sticky-group="format"
+							        {{ disp_class_2(supported_formats, 'gif') }}
+							        onclick="Playground.play({format:'gif'})">GIF</button>
+							<button type="button" sticky-group="format"
+							        {{ disp_class_2(supported_formats, 'bmp') }}
+							        onclick="Playground.play({format:'bmp'})">BMP</button>
+							<button type="button" sticky-group="format"
+							        {{ disp_class_2(supported_formats, 'png') }}
+							        onclick="Playground.play({format:'png', quality:79})">PNG type 1</button>
+							<button type="button" sticky-group="format"
+							        {{ disp_class_2(supported_formats, 'png') }}
+							        onclick="Playground.play({format:'png', quality:31})">PNG type 2</button>
 							<div>
-								<input id="strip" type="checkbox" value="1" onchange="Playground.play({strip: this.checked})">
-								<label for="strip">Strip metadata (e.g. EXIF data) and colour profiles</label>
+								<input id="strip" type="checkbox" value="1"
+								       {{ disp_class(supported_ops, 'strip') }}
+								       onchange="Playground.play({strip: this.checked})">
+								<label for="strip"
+									   {{ disp_class(supported_ops, 'strip') }}>
+									Strip metadata (e.g. EXIF data) and colour profiles
+								</label>
 							</div>
 						</fieldset>
 					</div>
 				</div>
+
+				{% if app_edition() == 'Standard' %}
+				<p>
+					<br>Items marked with a
+					<img src="{{ url_for('static', filename='images/icon-premium-16.png') }}" alt="Premium Edition">
+					icon are only supported in the Premium Edition.
+				</p>
+				{% endif %}	
 			</div>
 
 			<div class="sticky column col2">
@@ -201,9 +294,15 @@
 						<a id="view_plain" href="javascript:void(0)" target="_image">
 							View image in a new window
 						</a><br>
+						{% if 'pdf' in supported_formats %}
 						<a id="view_pdf" href="javascript:void(0)" target="_image">
 							View as PDF in a new window
 						</a><br>
+						{% else %}
+						<label id="view_pdf" {{ disp_class_2(supported_formats, 'pdf') }}>
+							View as PDF in a new window
+						</label><br>
+						{% endif %}
 						<a id="view_download" href="javascript:void(0)">
 							Download image
 						</a>
