--- a/src/imageserver/templates/base.html
+++ b/src/imageserver/templates/base.html
@@ -91,7 +91,7 @@
 			{% if settings.LOGO_IMAGE_PATH %}
 				<img height="50" src="{{ url_for('image', src=settings.LOGO_IMAGE_PATH, format='png', height=50, stats=0) }}" />
 			{% else %}
-				<img height="50" src="{{ url_for('static', filename='images/quru110.png') }}" />
+				<img height="50" src="{{ url_for('static', filename='images/mainlogo.png') }}" />
 			{% endif %}
 			</a>
 		</div>
