Add open sans font via Google fonts

--- a/src/imageserver/static/styles/base.css
+++ b/src/imageserver/static/styles/base.css
@@ -24,7 +24,7 @@
 */
 
 body {
-	font-family: Arial;
+	font-family: 'Open Sans', Arial, sans-serif;
 	font-size: 14px;
 	background-color: white;
 	color: black;
