--- a/src/imageserver/templates/base_blank.html
+++ b/src/imageserver/templates/base_blank.html
@@ -17,7 +17,8 @@
 
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/base.css') }}" type="text/css" />
-	<title>{{ about.__title__ }} :: {% block title %}{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
+    <title>{{ about.__title__ }} :: {% block title %}{% endblock %}</title>
 
 	{% block base_head %}{% endblock %}
 	{% block extra_head %}{% endblock %}
