--- a/src/imageserver/reports/templates/reports_index.html
+++ b/src/imageserver/reports/templates/reports_index.html
@@ -22,7 +22,7 @@
 {% block body %}
 	<div class="center">
 		<h1>
-			<img src="{{ url_for('static', filename='images/logo.gif') }}" />
+			<img src="{{ url_for('static', filename='images/logo.png') }}" />&nbsp;
 			Reports
 		</h1>
 		<div class="tall left centercol">
