--- a/src/imageserver/templates/index.html
+++ b/src/imageserver/templates/index.html
@@ -22,7 +22,7 @@
 {% block body %}
 	<div class="center">
 		<h1>
-			<img src="{{ url_for('static', filename='images/logo.gif') }}" />
+			<img src="{{ url_for('static', filename='images/logo.png') }}" />&nbsp;
 			{{ about.__title__ }} v{{ about.__version__ }}
 		</h1>
 	</div>
