Switch quru.com links over to the dedicated QIS web site

--- a/src/imageserver/templates/about.html
+++ b/src/imageserver/templates/about.html
@@ -26,9 +26,9 @@
 
 	<h2>Web sites</h2>
 	<p class="tall">
-		About Quru Ltd - <a href="https://quru.com/">https://quru.com/</a><br>
-		{{ about.__tag__ }} on quru.com - <a href="{{ about.__uri__ }}">{{ about.__uri__ }}</a><br>
-		{{ about.__tag__ }} on GitHub - <a href="{{ about.__source_uri__ }}">{{ about.__source_uri__ }}</a><br>
+		{{ about.__tag__ }} web site &ndash; <a href="{{ about.__uri__ }}">{{ about.__uri__ }}</a><br>
+		{{ about.__tag__ }} on GitHub &ndash; <a href="{{ about.__source_uri__ }}">{{ about.__source_uri__ }}</a><br>
+		About Quru Ltd &ndash; <a href="https://quru.com/">https://quru.com/</a><br>
 	</p>
 
 	<h2>Documentation</h2>
