--- a/src/imageserver/templates/index.html
+++ b/src/imageserver/templates/index.html
@@ -46,8 +46,8 @@
 
 	<br>
 	<p class="tall center">
-		About Quru Ltd - <a href="https://quru.com/">https://quru.com/</a><br>
-		{{ about.__tag__ }} on quru.com - <a href="{{ about.__uri__ }}">{{ about.__uri__ }}</a><br>
+		Web site &ndash; <a href="{{ about.__uri__ }}">{{ about.__uri__ }}</a><br>
+		About Quru Ltd &ndash; <a href="https://quru.com/">https://quru.com/</a><br>
 	</p>
 
 	<br>
