Use https links

--- a/src/imageserver/templates/slideshow_view.html
+++ b/src/imageserver/templates/slideshow_view.html
@@ -36,9 +36,9 @@
 				mode: 'slide',
 				server: '{{ url_for('index') }}',
 				images: [
-					{ src: '{{ image_src }}', url: 'http://quru.com/' },
-					{ src: '{{ image_src }}', left: 0.1, top: 0.1, right: 0.9, bottom: 0.9, url: 'http://quru.com/' },
-					{ src: '{{ image_src }}', left: 0.2, top: 0.2, right: 0.8, bottom: 0.8, url: 'http://quru.com/' }
+					{ src: '{{ image_src }}', url: 'https://quru.com/' },
+					{ src: '{{ image_src }}', left: 0.1, top: 0.1, right: 0.9, bottom: 0.9, url: 'https://quru.com/' },
+					{ src: '{{ image_src }}', left: 0.2, top: 0.2, right: 0.8, bottom: 0.8, url: 'https://quru.com/' }
 				]
 			});
 		});
