--- a/src/imageserver/templates/gallery_view.html
+++ b/src/imageserver/templates/gallery_view.html
@@ -41,12 +41,15 @@
 					{ src: '{{ image_srcs.0 }}' },
 					{ src: '{{ image_srcs.1 }}' },
 					{ src: '{{ image_srcs.2 }}' },
-					{ src: '{{ image_srcs.0 }}', flip: 'v' },
-					{ src: '{{ image_srcs.1 }}', flip: 'v' },
-					{ src: '{{ image_srcs.2 }}', flip: 'v' },
+					{ src: '{{ image_srcs.3 }}' },
+					{ src: '{{ image_srcs.4 }}' },
+					{ src: '{{ image_srcs.5 }}' },
 					{ src: '{{ image_srcs.0 }}', colorspace: 'gray' },
 					{ src: '{{ image_srcs.1 }}', colorspace: 'gray' },
-					{ src: '{{ image_srcs.2 }}', colorspace: 'gray' }
+					{ src: '{{ image_srcs.2 }}', colorspace: 'gray' },
+					{ src: '{{ image_srcs.3 }}', colorspace: 'gray' },
+					{ src: '{{ image_srcs.4 }}', colorspace: 'gray' },
+					{ src: '{{ image_srcs.5 }}', colorspace: 'gray' }
 				],
 				viewer: {
 					showcontrols: 'yes'
