--- a/src/imageserver/templates/about.html
+++ b/src/imageserver/templates/about.html
@@ -56,6 +56,10 @@
 			<td>{{ app_edition() }} {% if app_edition()=='Standard' %}(<a class="action" href="{{ about.__uri__ }}">upgrade information</a>){% endif %}</td>
 		</tr>
 		<tr>
+			<td>Host ID</td>
+			<td>{{ server_host_id }}</td>
+		</tr>
+		<tr>
 			<td>Debug mode</td>
 			<td>{{ 'Enabled' if settings.DEBUG else 'Off' }}</td>
 		</tr>
